--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,12 @@
 <style>
+@media (min-width:320px)  { 
+  /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
+  .lib_panel {
+    width: 8%;
+    display: block;
+  }  
+}
+
 @font-face {
   font-family: DaysOne;
   src: url("{{url_for('static', filename='fonts/DaysOne-Regular.ttf')}}") format('truetype');
@@ -6,7 +14,6 @@
 
 a {
   color: rgba(200, 200, 200, 0.8);
-  background-color: rgba(50, 50, 50, 0.2);
 }
 a:link {
   color: rgba(200, 200, 200, 0.8);
@@ -35,8 +42,11 @@ body, html {
   bottom: 7px;
   background-color: rgba(0, 0, 0, 0.7);
   padding: 10px;
+  vertical-align: middle;
 }
+
 .element {
+  bottom: 25%;  
   width: 20%;
   height: 100%;
   position: relative;
@@ -71,39 +81,75 @@ body, html {
   width: 45%;
 }
 
+
+
+
 .logo {
-  background-image: url("{{url_for('static', filename='images/logo.png')}}");
+//  background-image: url("{{url_for('static', filename='images/logo.png')}}");
+//  background-repeat: no-repeat;
+//  background-size: 100% 100%; 
+//  object-fit: cover;
+//  height: 140%;
+//  width: 3.5%;
+}
+img {
+  position: relative;
+  max-width: 16%;
+  bottom: 25%;
 }
 
 
 
-.left_panel {
-  position: relative;
-  right: 0.5%;
+
+
+.lib_panel {
   display: block;
-  width: 2.5%;
-  height: 65%;
-  background-color: rgba(100, 100, 100, 0.8);
-  transition: 1.5s;
-  color: rgba(255, 255, 255, 1);
-  font-size: 0px;
+  position: relative;
+  color: white;
+  width: 2%;
+  right: 0.3%;
+  background-color: rgba(100, 100, 100, 0.7);
+  font-size: 0.1px;
+  height: 50%;
+  transition: 1s;
   top: 10%;
   border: 1px solid black;
-  border-style: double solid solid solid;
   border-radius: 0% 15% 15% 0%;
 }
-.left_panel:hover {
-  width: 25%;
-  color: rgba(255, 255, 255, 1);
-  font-size: 16px;
+.lib_panel:hover {
+  width: 20%;
+  font-size: 12px;
+  display: block;
+  .lib-panelbtn {
+    display: block;
+  }
 }
+.lib-panelbtn {
+  display: none;
+}
+.textblock {
+  background-color: rgba(25, 25, 25, 0.4);
+  color: white;
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 25px;
+  width: 75%;
+  font-size: 120%;
+  text-align: left;
+}
+
+.paneltxt {
+  position: relative;
+  top: 50%;
+}
+
 
 </style>
 
 <html>
 <head>
   <title> {% block title %} {% endblock %}</title>
-
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -117,9 +163,17 @@ body, html {
     <div id="panel2" class="panel center">
     </div>
   {% endif %}
-  <div id="left_panel" class="left_panel">
-    <h1> hi................. </h1>
+  {% if session["user_id"] and library %}
+  <div id="lib_panel" class="lib_panel">
+    <h1> Library: </h1>
+      {% for i in games %}
+        <div id="game-libpanel" class="game-libpanel">
+          <img src=i[-1]></img>
+          <h2> title </h2>
+      {% endfor %}
+  {% endif %}
   </div>
+
   <div id="embed" class="embed center">
   {% block embed %} {% endblock %}
   </div>
@@ -128,12 +182,15 @@ body, html {
 
 <script>
 
-function addPanelElement(hrf, name, id, add) {
+function addPanelElement(hrf, name, id, add, notext) {
   var panel = document.getElementById(id);
   var a = document.createElement("a");
-  a.innerText=name;
+  if (!notext) {
+    a.innerText=name;
+  }
   a.href=hrf;
-
+  a.className="paneltxt";
+  a.id = "a"+name;
 
   var div = document.createElement("div");
   div.id=name;
@@ -147,7 +204,7 @@ function addPanelElement(hrf, name, id, add) {
 }
 
 {% if not session["user_id"] %}
-  addPanelElement("", "{{website_name}}", "panel2", "logo");
+  addPanelElement("/", "{{website_name}}", "panel2", "logo", true);
   addPanelElement("about", "About", "panel2", "about");
   addPanelElement("browse", "Browse", "panel2", "browse");
   addPanelElement("basket", "Basket", "panel2", "basket");
@@ -157,15 +214,31 @@ function addPanelElement(hrf, name, id, add) {
   addPanelElement("login", "Login", "panel2", "loginpart");
   addPanelElement("register", "Register", "panel2", "loginpart");
 {% else %}
-  addPanelElement("", "{{website_name}}", "panel", "logo");
+  addPanelElement("/", "{{website_name}}", "panel", "logo", true);
   addPanelElement("about", "About", "panel", "about");
   addPanelElement("browse", "Browse", "panel", "browse");
   addPanelElement("basket", "Basket", "panel", "basket");
   addPanelElement("library", "Library", "panel", "library");
 
 
-  addPanelElement("profile", "profile", "panel");
+  addPanelElement("profile", "profile", "panel", "profile", true);
 {% endif %}
+
+function swapImg(obj, src) {
+  img = document.createElement("img");
+  img.src=src;
+  obj.appendChild(img);
+}
+
+swapImg(document.getElementById("a{{website_name}}"), "{{url_for('static', filename='images/logo.png')}}");
+{% if session["user_id"] %}
+swapImg(document.getElementById("aprofile"), "{{url_for('static', filename='images/profiles/' + str(session['user_id']) + '.png')}}");
+{% else %}
+swapImg(document.getElementById("aprofile"), 
+  "{{url_for('static', filename=dbs.execute('SELECT val FROM dynamic WHERE var=\'defprof\''))}}");
+
+{% endif %}
+
 </script>
 </body>
 </html>
