--- a/templates/register.html
+++ b/templates/register.html
@@ -8,9 +8,9 @@
 
   <form method="post" action="/register">
 
-    <input type=text name="username" placeholder="Username.." class="username query center"></input>
-    <input type=password name="password" placeholder="Password.." class="password query center"></input>
-    <input type=password name="password-conf" placeholder="Confirm Password.." class="password query center"></input>
+    <input type=text name="username" placeholder="Username" class="username query center"></input>
+    <input type=password name="password" placeholder="Password" class="password query center"></input>
+    <input type=password name="password-confirm" placeholder="Confirm password" class="password query center"></input>
 
     <button name="submit" class="submit btn ">Submit</button>
 
